--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <body>
     <div class="container">
        <div class="side-bar">
-        <p></p>
+         <div class="playerSelct">
+           <p class="player">Player1</p>
+           <p class="player">Player2</p>
+         </div>
        </div>
        <div class="head">
 
