changing the initial logic of script

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   <body>
     <div class="container">
        <div class="side-bar">
-         <div class="playerSelct">
+         <div class="playerSelect">
            <p class="player">Player1</p>
-           <p class="player">Player2</p>
+           <div class="markers">
+              <button class="mark">X</button>
+              <button class="mark">O</button>           
+           </div>
          </div>
        </div>
        <div class="head">
