--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
            <p class="player">Player1</p>
            <div class="markers">
               <button class="mark">X</button>
-              <button class="mark">O</button>           
+              <button class="mark">O</button>
            </div>
          </div>
        </div>
@@ -21,33 +21,15 @@
        </div>
        <div class="main-body">
          <div class="game">
-           <div class="gameboard 1">
-
-           </div>
-           <div class="gameboard 2">
-
-           </div>
-           <div class="gameboard 3">
-
-           </div>
-           <div class="gameboard 4">
-
-           </div>
-           <div class="gameboard 5">
-
-           </div>
-           <div class="gameboard 6">
-
-           </div>
-           <div class="gameboard 7">
-
-           </div>
-           <div class="gameboard 8">
-
-           </div>
-           <div class="gameboard 9">
-
-           </div>
+           <div class="gameboard" id="0"></div>
+           <div class="gameboard" id="1"></div>
+           <div class="gameboard" id="2"></div>
+           <div class="gameboard" id="3"></div>
+           <div class="gameboard" id="4"></div>
+           <div class="gameboard" id="5"></div>
+           <div class="gameboard" id="6"></div>
+           <div class="gameboard" id="7"></div>
+           <div class="gameboard" id="8"></div>
          </div>
        </div>
        <div class="footer">
